--- a/css/style.css
+++ b/css/style.css
@@ -141,52 +141,77 @@ li a:hover:before{
     border-radius: 27px;
     background-color: white;
     border: rgb(206, 203, 203) 2px solid;
-    padding: 15px 18px 15px 55px;
-    color: black;
+    padding: 0px 15px 0px 0px;
 }
 
-.eco_button:before, .family_button:before,
-.heart_button:before, .animal_button:before {
+.search-filter input {
+    border-radius: 0;
+    background-color: white;
+    border: none;
+    padding: 0;
+    color: black;
+    font-size: 17px;
+    font-weight: 700;
+    padding: 13px 1px 13px 8px;
+    cursor: pointer;
+}
+
+.eco_icon:before, .family_icon:before,
+.heart_icon:before, .animal_icon:before {
     background-color: var(--font-blue-bright);
     color: var(--font-blue-dark);
     border-radius: 50%;
     border: var(--font-blue-bright) 1px solid;
-    position: relative;
+
 }
 
-.eco_button:before {
+.eco_icon:before {
     content:"\f53a";
     font-weight: 900;
     font-family: "fontawesome";
     display: inline-block;
     padding: 15px;
-    left:48px;
+    margin-left: -3px;
+
 }
 
-.family_button:before {
+.family_icon:before {
     content:"\f1ae";
     font-weight: 900;
     font-family: "fontawesome";
     display: inline-block;
     padding: 15px 18px;
-    left:48px;
+    margin-left: -3px;
 }
 
-.heart_button:before {
+.heart_icon:before {
     content:"\f004";
     font-weight: 900;
     font-family: "fontawesome";
     display: inline-block;
     padding: 15px;
-    left:48px;
+    margin-left: -3px;
 }
 
-.animal_button:before {
+.animal_icon:before {
     content:"\f6d3";
     font-weight: 900;
     font-family: "fontawesome";
     display: inline-block;
     padding: 15px;
-    left:48px;
+    margin-left: -3px;
+}
+
+.info-search {
+    display: flex;
+    align-items: center;
+}
+
+.info-search .fa-info {
+    color: var(--font-blue-dark);
+    border:var(--font-grey) solid 2px;
+    border-radius: 50%;
+    padding: 5px 11px;
+    margin-right: 15px;
 }
 
