--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,20 @@ body a {
     font-size: 16px;
 }
 
+.bloc-resa_famous, .bloc-resa_loc {
+    background-color: var(--font-grey);
+    border-radius: 2%;
+    padding: 50px;
+}
+
+.card-famous, .card-location {
+    background-color: white;
+    border-radius: 5%;
+    padding: 5px 5px 5px 5px;
+    width: 100%;
+    height: 100%;
+}
+
 /*header*/
 
 .bloc-head_background {
@@ -216,14 +230,8 @@ li a:hover:before{
 
 .bloc-resa {
     display: grid;
-    grid-template-columns: 54% 32%;
+    grid-template-columns: 58% 32%;
     grid-gap: 5%;
-}
-
-.bloc-resa_loc {
-    background-color: var(--font-grey);
-    border-radius: 2%;
-    padding: 50px;
 }
 
 .bloc-card_location {
@@ -232,16 +240,10 @@ li a:hover:before{
     grid-gap: 45px;
 }
 
-.card-location {
-    background-color: white;
-    border-radius: 5%;
-    padding: 8px 8px 0 8px;
-    width: 100%;
-}
-
 .card-img {
-    height: 60%;
-    max-width: 400px;
+    max-height: 130px;
+    height: 100%;
+    max-width: 300px;
     width: 100%;
     border-top-left-radius: 8%;
     border-top-right-radius: 8%;
@@ -258,7 +260,28 @@ li a:hover:before{
 
 /* bloc-resa_famous */
 
-.bloc-resa_famous {
-    background-color: var(--font-grey);
-    border-radius: 2%;
+.bloc-card_famous {
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 20px;
+}
+
+.card-famous .titre-card {
+    font-weight: 800;
+    margin: 0;
+}
+
+.card-famous .card-img {
+    border-top-right-radius: 0%;
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
+    max-height: 360px;
+    height: 100%;
+    width: 30%;
+    float: left;
+    padding-right: 20px;
+}
+
+.bloc-description_famous {
+    padding: 10px;
 }
