--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,14 @@ body a {
 }
 
 .layout {
-    max-width: 1790px;
     width: 100%;
     margin: auto;
+}
+
+.layouts-contenu {
+    max-width: 1790px;
+    width: 100%;
+    margin: auto;    
 }
 
 /* class-use */
@@ -48,12 +53,13 @@ body a {
     padding: 50px;
 }
 
-.card-famous, .card-location {
+.card-famous, .card-location, .card-activity {
     background-color: white;
     border-radius: 5%;
     padding: 5px 5px 5px 5px;
     width: 100%;
     height: 100%;
+    box-shadow: 0px 0px 20px -8px;
 }
 
 /*header*/
@@ -231,7 +237,7 @@ li a:hover:before{
 .bloc-resa {
     display: grid;
     grid-template-columns: 58% 32%;
-    grid-gap: 5%;
+    grid-gap: 10%;
 }
 
 .bloc-card_location {
@@ -285,3 +291,81 @@ li a:hover:before{
 .bloc-description_famous {
     padding: 10px;
 }
+
+
+/* activity-bloc */
+
+.bloc-flex_activity-principal {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 90px;
+    margin-bottom: 70px;
+}
+
+.bloc-flex_activity {
+    display: flex;
+}
+
+.bloc-flex_activity-right {
+    display: flex;
+    flex-direction: column;
+    padding-left: 13%;
+}
+
+.bloc-flex_activity-right .card-activity {
+    padding: 0;
+}
+
+.card-activity {
+    padding: 0;
+    width: auto;
+    height: auto;
+}
+
+.card-img-acivity {
+    width: 20vw;
+    border-top-right-radius: 5%;
+    border-top-left-radius: 5%;
+}
+
+.card-img-activity_tall {
+    height: auto;
+}
+
+.bloc-activity_end-b {
+    margin-top: auto;
+}
+
+.bloc-activity_end-a {
+    margin-top: auto;   
+}
+
+.card-activity .titre-card {
+    font-weight: 800;
+    margin: 5px 0px 5px 10px;
+    
+}
+
+/*footer */
+
+.bloc-footer_background {
+    background-color: var(--font-grey);
+    width: 100%;
+}
+
+.bloc-footer {
+    display: flex;
+}
+
+.bloc-footer_contenu {
+    margin-right: 20%;
+    padding: 40px;
+}
+
+@media screen and (max-width: 1450px) {
+    .search-filter {
+        width: 65%;
+    }
+
+}
+
