--- a/css/style.css
+++ b/css/style.css
@@ -132,12 +132,12 @@ li a:hover {
 
 /* research-line */
 
-.reserch-line {
+.research-line {
     display: flex;
     margin-bottom: 30px;
 }
 
-.reserch-line .fa-map-marker-alt {
+.research-line .fa-map-marker-alt {
     background-color: var(--font-grey);
     border: 1px solid var(--font-grey);
     color: black;
@@ -364,7 +364,7 @@ li a:hover {
 
 .bloc-footer_contenu {
     margin-right: 20%;
-    padding: 40px;
+    padding: 30px;
 }
 
 @media screen and (max-width: 1450px) {
@@ -373,6 +373,11 @@ li a:hover {
     }
     .card-location .card-img {
         max-height: 100px;
+    }
+
+    .bloc-footer_contenu {
+        margin-right: 20%;
+        padding: 12px;
     }
 
 }
@@ -500,11 +505,11 @@ li a:hover {
 
     .bloc-footer {
         flex-direction: column;
-        align-items: center;
+        text-align: center;
     }
 
     .bloc-footer_contenu {
-        margin: auto;
+        margin: 0;
     }
 
 }
@@ -559,13 +564,30 @@ li a:hover {
     }
     nav ul {
         position: absolute;
-        right: 5%;
+        left: auto;
         
+    }
+}
+
+@media screen and (max-width: 420px) {
+    nav ul {
+        right: 1%;
     }
 }
 
 @media screen and (max-width: 375px) {
 
+    .bloc-research {
+        margin-top: 16%;
+    }
+
+    .bloc-resa_famous, .bloc-resa_loc {
+        padding: 35px;
+    }
+
+    .bloc-resa_loc {
+        background-color: white;
+    }
     .card-famous, .card-location {
         margin: auto;
         height: 100%;
@@ -575,5 +597,29 @@ li a:hover {
     .card-location .card-img {
         height: 60%;
         max-height: 99px;
+    }
+    
+    .bloc-flex_activity-principal {
+        grid-gap: 0px;
+    }
+
+    .card-img-acivity {
+        width: 79.2vw;
+        max-height: 34.5vw;
+    }
+
+    .bloc-footer {
+        text-align: initial;
+    }
+
+    .test:before {
+        content: '\1f50d';
+        display: block;
+        font-weight: 900;
+
+    }
+
+    .research-line .recherche{
+        display: none;
     }
 }
