--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
 
 body a {
     text-decoration: none;
+    color: #000;
 }
 
 .layout {
@@ -51,7 +52,7 @@ body a {
 .bloc-resa_famous, .bloc-resa_loc {
     background-color: var(--font-grey);
     border-radius: 2%;
-    padding: 50px;
+    padding: 39px;
 }
 
 .card-famous, .card-location, .card-activity {
@@ -144,7 +145,7 @@ li a:hover {
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
     font-size: 16px;
-    padding: 10px 14px;
+    padding: 14px 14px;
 }
 
 /* research-fliter */
@@ -576,24 +577,6 @@ li a:hover {
         left: auto;
         
     }
-}
-
-@media screen and (max-width: 420px) {
-    nav ul {
-        right: 1%;
-    }
-}
-
-@media screen and (max-width: 375px) {
-
-    .logo_page {
-        width: 26vw;
-    }
-
-    .info-search .fa-info {
-        margin-top: -17px;
-        padding: 3px 9px;
-    }
 
     .search-icon:before {
         content: '\1f50d';
@@ -604,12 +587,36 @@ li a:hover {
         padding: 12px 16px;
         border-radius: 16px;
         margin-left: -22px
-
     }
 
     .research-line .recherche{
         display: none;
     }
+
+}
+
+@media screen and (max-width: 420px) {
+    nav ul {
+        right: 1%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+
+    h3 {
+        text-align: left;
+        margin-bottom: 25px;
+    }
+
+    .logo_page {
+        width: 26vw;
+    }
+
+    .info-search .fa-info {
+        margin-top: -17px;
+        padding: 3px 9px;
+    }
+
     .research-line .fa-map-marker-alt {
         padding: 16px;
     }
