--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@ main {
     box-shadow: 0px 0px 20px -8px;
 }
 
+.checked {
+    color: var(--font-blue-dark);
+    padding-top: 10px;
+}
+
 /*header*/
 
 .bloc-head_nav {
@@ -309,6 +314,10 @@ li a:hover {
     font-weight: 900;
     font-family: fontawesome;
     content: "\f201";
+}
+
+.bloc-resa_famous .checked {
+    padding-top: 14%;
 }
 
 /* activity-bloc */
