--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ main {
     padding-top: 10px;
 }
 
+.empty {
+    color:  var(--font-grey);
+}
+
 /*header*/
 
 .bloc-head_nav {
@@ -350,15 +354,20 @@ li a:hover {
 }
 
 .card-img-acivity {
-    width: 20vw;
+    width: 19vw;
     border-top-right-radius: 5%;
     border-top-left-radius: 5%;
     object-fit: cover;
 }
 
 .card-img-activity_tall {
-    height: auto;
+    height: 89%;
 }
+
+.card-img-activity_tall.card-img-acivity {
+    width: 100%;
+}
+
 
 .bloc-activity_end-b, .bloc-activity_end-a {
     margin-top: auto;
@@ -384,6 +393,23 @@ li a:hover {
     margin-right: 20%;
     padding: 30px;
 }
+
+/* @media screen and (max-width: 2758px) {
+    .card-img-acivity {
+        width: 12vw;
+        border-top-right-radius: 5%;
+        border-top-left-radius: 5%;
+        object-fit: cover;
+    }
+    
+    .card-img-activity_tall {
+        height: 89%;
+    }
+    
+    .card-img-activity_tall.card-img-acivity {
+        width: 100%;
+    }
+} */
 
 @media screen and (max-width: 1450px) {
     .search-filter {
