--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,6 @@
 
 /* param-general*/
-
-:root {
-    --font-blue-dark: #0065FC;
-    --font-blue-bright: #DEEBFF;
-    --font-grey: #F2F2F2; 
-  }
+@import url("typo.css");
 
 body, body a {
     font-family: Raleway;
@@ -222,6 +217,8 @@ li a:hover {
 
 .heart_icon:before {
     content:"\f004";
+    font-weight: bold!important;
+    
 }
 
 .animal_icon:before {
@@ -606,12 +603,13 @@ li a:hover {
     }
 
     .search-icon:before {
-        content: '\1f50d';
+        content: '\f002';
+        font-family: 'fontawesome';
         display: block;
         font-weight: 700;
         color: white;
         background-color: var(--font-blue-dark);
-        padding: 12px 16px;
+        padding: 14.5px 16px;
         border-radius: 16px;
         margin-left: -22px
     }
