--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ main {
 
 .btn-general {
     background-color:  #0065FC;
-    border:  #0065FC;
+    border:  none;
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
     padding: 0 14px;
@@ -147,7 +147,6 @@ li a:hover {
 
 .research-line .fa-map-marker-alt {
     background-color: #F2F2F2;
-    border: 1px solid #F2F2F2;
     color: black;
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
@@ -196,7 +195,6 @@ li a:hover {
     background-color: #DEEBFF;
     color:  #0065FC;
     border-radius: 50%;
-    border: #DEEBFF 1px solid;
     font-weight: 900;
     font-family: "fontawesome";
     display: inline-block;
